[gd_scene load_steps=4 format=2]

[ext_resource path="res://StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/UbuntuBold20.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/UbuntuNormal.tres" type="DynamicFont" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 431.0
margin_top = 215.0
margin_right = 529.0
margin_bottom = 325.0

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 98.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Defused"
align = 1

[node name="StartGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 98.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
text = "Start Game"

[node name="Levels" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 98.0
margin_bottom = 81.0
custom_fonts/font = ExtResource( 3 )
text = "Level Select"

[node name="QuitGame" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 98.0
margin_bottom = 110.0
custom_fonts/font = ExtResource( 3 )
text = "Quit Game"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
